# OOP_2023

./: README.md
Lab1/: CMakeLists.txt  README.md  func.cpp  func.h  main.cpp  tests.cpp
lab1/: CMakeLists.txt  func.h  main.cpp  raschet.cpp  test.cpp  tests.cpp
lab2/: CMakeLists.txt  README.md  bool_op.cpp  eleven.h  eleven_constr.cpp  eleven_get.cpp  main.cpp  operations.cpp  private.cpp  tests.cpp
lab3/: CMakeLists.txt  README.md  array.cpp  array.h  eight_ugl.cpp  eight_ugl.h  figure.h  main.cpp  point.cpp  point.h  six_ugl.cpp  six_ugl.h  tests.cpp  triangle.cpp  triangle.h
lab4/: CMakeLists.txt  README.md  array.h  figure.h  functions.h  hex.h  main.cpp  octo.h  tests.cpp  tria.h
lab5/: CMakeLists.txt  README.md  allocator.h  list.h  main.cpp  readme.md  tests.cpp
lab6/: CMakeLists.txt  README.md  bear.cpp  bear.h  factory.cpp  factory.h  main.cpp  npc.cpp  npc.h  observer.cpp  observer.h  orc.cpp  orc.h  squirrel.cpp  squirrel.h  tests.cpp
lab7/: CMakeLists.txt  README.md  bear.cpp  bear.h  main.cpp  npc.h  orc.cpp  orc.h  squirrel.cpp  squirrel.h  tests.cpp
